# FooBar

./: .gitignore  CLAUDE.md  CMakeLists.txt  Coding_Standards.md  LICENSE  README.md  sonar-project.properties
.github/workflows/: build.yml
cmake/: CompilerWarnings.cmake  FBDetermineCxxStandard.cmake
doc/req/CSV_Parser/: RFC_4180_CSV_PARSER_REQ.md
fb_core/: CMakeLists.txt  README.md
fb_core/cmake/: fb_coreConfig.cmake.in
fb_core/docs/: README.md  circular_buffer.md  csv_parser.md  index.md  stop_watch.md  timer.md
fb_core/examples/: CMakeLists.txt  README.md  timer_examples.cpp
fb_core/examples/hello_core/: main.cpp
fb_core/include/fb/: circular_buffer.h  circular_buffer_iterator.h  csv_parser.h  fb_core.h  span_compat.h  stop_watch.h  timer.h
fb_core/src/: Library.cpp  csv_parser.cpp
fb_core/ut/: CMakeLists.txt  test_circular_buffer.cpp  test_csv_parser.cpp  test_library_info.cpp  test_stop_watch.cpp  test_timer.cpp
fb_net/: CMakeLists.txt  README.md
fb_net/cmake/: fb_netConfig.cmake.in
fb_net/doc/: CROSS_PLATFORM_COMPATIBILITY.md  DOCUMENTATION_STATUS.md  SIGNAL_INTEGRATION_SUMMARY.md  examples.md  exceptions.md  index.md  poll_set.md  readme.md  server_socket.md  socket_address.md  socket_stream.md  tcp_client.md  tcp_server.md  tcp_server_connection.md  udp_client.md  udp_handler.md  udp_server.md  udp_socket.md
fb_net/examples/: CMakeLists.txt  README.md
fb_net/examples/chat_server/: chat_client.cpp  chat_server.cpp
fb_net/examples/file_transfer/: file_client.cpp  file_server.cpp
fb_net/examples/http_server/: http_server.cpp
fb_net/examples/if_tests/: benchmark_performance.cpp  socket.cpp  test_basic.cpp  test_integration.cpp  test_legacy_compat.cpp  test_memory_validation.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4.cpp
fb_net/examples/port_scanner/: port_scanner.cpp
fb_net/examples/signal_demo/: signal_demo.cpp
fb_net/examples/udp_ping/: udp_ping_client.cpp  udp_ping_server.cpp
fb_net/examples/udp_signal_demo/: udp_signal_demo.cpp
fb_net/include/fb/: fb_net.h  poll_set.h  server_socket.h  socket_address.h  socket_base.h  socket_stream.h  tcp_client.h  tcp_server.h  tcp_server_connection.h  udp_client.h  udp_handler.h  udp_server.h  udp_socket.h
fb_net/include/fb/detail/: socket_error_utils.h
fb_net/src/: Library.cpp  poll_set.cpp  server_socket.cpp  socket_address.cpp  socket_base.cpp  socket_stream.cpp  tcp_client.cpp  tcp_server.cpp  tcp_server_connection.cpp  udp_client.cpp  udp_handler.cpp  udp_server.cpp  udp_socket.cpp
fb_net/ut/: CMakeLists.txt  test_datagram_socket.cpp  test_main.cpp  test_poll_set.cpp  test_server_socket.cpp  test_signal_integration.cpp  test_socket_address.cpp  test_socket_stream.cpp  test_stream_socket.cpp  test_tcp_server.cpp  test_udp_server.cpp
fb_signal/: CMakeLists.txt  FB_SIGNAL_SLOT_LOCK_FREE.md  Project_Info.md
fb_signal/bench/: CMakeLists.txt  fb_signal_bench.cpp
fb_signal/docs/: README.md  caveats.md  design.md  index.md  usage.md
fb_signal/include/fb/: connection.hpp  event_queue.hpp  fb_signal.hpp  signal.hpp  slot.hpp
fb_signal/include/fb/detail/: atomic_utils.hpp  function_traits.hpp  slot_list.hpp
fb_signal/ut/: CMakeLists.txt
fb_signal/ut/fb_signals/: callable_test.cpp  connection_test.cpp  edge_cases_test.cpp  latency_benchmark_test.cpp  queued_delivery_test.cpp  signal_test.cpp  thread_safety_test.cpp
fb_strings/: .clang-format  CMakeLists.txt
fb_strings/doc/: README.md  assumptions.md  format.md  hashing.md  index.md  iterators.md  random.md  string_builder.md  string_list.md  string_utils.md  utf8_utils.md
fb_strings/include/fb/: format.h  string_builder.h  string_hash.h  string_iterators.h  string_list.h  string_random.h  string_utils.h  utf8_utils.h
fb_strings/src/: format.cpp  string_builder.cpp  string_hash.cpp  string_list.cpp  string_random.cpp  string_utils.cpp  utf8_utils.cpp
fb_strings/ut/: CMakeLists.txt  benchmark_split.cpp  test_format.cpp  test_string_builder.cpp  test_string_hash.cpp  test_string_iterators.cpp  test_string_list.cpp  test_string_random.cpp  test_string_utils.cpp  test_utf8_utils.cpp
